[package]
name = "async-plugins-test"
version = "0.1.0"
authors = ["Gary Hai <gary@neunit.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    ".",
    "async-plugin",
    "plugin-common"
]

[dependencies]
libloading = "0.5"
tokio =  { version = "0.2", features = ["full"] }
async-std = { version = "1.3", features = ["attributes"] }
plugin-common = {path = "./plugin-common"}