[package]
name = "async-plugin"
version = "0.1.0"
authors = ["Gary Hai <gary@neunit.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"] 


[dependencies]
plugin-common = {path = "../plugin-common"}
tokio =  { version = "0.2", features = ["full"] }
async-std = { version = "1.3", features = ["attributes"] }
